# bot_curriculum

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  render.yaml  ruff.toml  test_extractor.py
.claude/: settings.local.json
.superpowers/brainstorm/1063-1775683588/content/: cv-evaluator-layout.html  ux-flow-analysis.html
.superpowers/brainstorm/1063-1775683588/state/: server-stopped
.superpowers/brainstorm/1157-1775486397/content/: aesthetic-direction.html  card-redesign.html
.superpowers/brainstorm/1157-1775486397/state/: server-stopped
.superpowers/brainstorm/745-1775855434/content/: design-tabs.html  nav-tabs-options.html
.superpowers/brainstorm/745-1775855434/state/: server-stopped
backend/: evaluador.py  evaluator.py  extractor.py  jobs.py  ranker.py  scorer.py  sessions.py
backend/prompts/: ats_skill.md
docs/: TESTING.md  estudio-completo.md  jira-tickets.md
docs/superpowers/plans/: 2026-03-27-wakeup-polling.md  2026-04-03-job-board-cv-scoring.md  2026-04-06-jobs-ux-glassmorphism.md  2026-04-06-phase-6-zvec.md  2026-04-07-jira-ticket-completion.md  2026-04-08-cv-evaluator-ux-redesign.md  2026-04-10-global-tab-navigation.md
docs/superpowers/specs/: 2026-03-26-cv-evaluator-frontend-design.md  2026-03-27-wakeup-polling-design.md  2026-04-06-jobs-ux-glassmorphism.md  2026-04-06-phase-6-zvec-design.md  2026-04-10-global-tab-navigation.md
src/: main.py  router.py
src/routes/: evaluate.py  health.py  jobs.py  session.py
src/static/: app.js  index.html  job-detail.html  job-detail.js  jobs.css  jobs.html  jobs.js  style.css
tests/: conftest.py  test_evaluate.py  test_jobs.py  test_ranker.py  test_scorer.py  test_sessions.py
